# smartql

./: Cargo.toml
smartql_macro/: Cargo.toml
smartql_macro/src/: lib.rs
smartql_test/: Cargo.toml
smartql_test/src/: main.rs
src/: builder.rs  internal.rs  lib.rs
