[package]
name = "smartql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
tokio = { version = "1.5.0", features = ["full"] }
sqlx = { version = "0.5.9", features = ["runtime-tokio-native-tls", "mysql"] }
cache_loader_async = "0.1.2"
smartql_macro = { path = "./smartql_macro" }